do swagger 2.0
